# django_UBuntu

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Readme.md  docker-compose.yml  manage.py  package.txt  pyproject.toml  requirements.txt  run.sh  setup.sh
api1/: models.py  serializers.py  tests.py  urls.py  views.py
app/: models.py  serializers.py  tests.py  urls.py  views.py
finalteststore2/: settings.py  urls.py  wsgi.py
utils/: .env  .env_template  settings.py  urls.py  wsgi.py
