[tool.poetry]
name = "ExpressStoreConfigAPIs"
version = "0.1.0"
description = "ExpressStore Config Portal Bankend APIs"
authors = ["Arunkumar"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.24"
djangorestframework = "3.12.4"
django-cors-headers = "3.10.0"
djongo = "1.3.1"
pymongo = "3.12.0"
sqlparse = "0.2.4"
dnspython = "2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
